[gd_scene load_steps=16 format=3 uid="uid://causqsu2bysvg"]

[ext_resource type="Script" path="res://poteau.gd" id="1_flmbt"]
[ext_resource type="Texture2D" uid="uid://5hgl674r3f2q" path="res://assets/kenney_1-bit-pack/Tilesheet/colored.png" id="2_uld2r"]
[ext_resource type="Texture2D" uid="uid://jy7a52a54quy" path="res://assets/kenney_1-bit-pack/Tilesheet/colored-transparent_packed.png" id="3_u42it"]
[ext_resource type="Script" path="res://assets/area_2d.gd" id="4_ik1g8"]
[ext_resource type="AudioStream" uid="uid://b771pca52lgk3" path="res://assets/laserShoot.wav" id="4_sithh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d36n5"]
atlas = ExtResource("3_u42it")
region = Rect2(736, 272, 16, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_hct1j"]
atlas = ExtResource("3_u42it")
region = Rect2(64, 240, 16, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_55kv6"]
atlas = ExtResource("3_u42it")
region = Rect2(64, 240, 16, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gvig"]
atlas = ExtResource("3_u42it")
region = Rect2(64, 240, 16, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxvgl"]
atlas = ExtResource("3_u42it")
region = Rect2(64, 240, 16, 15)

[sub_resource type="SpriteFrames" id="SpriteFrames_ogko2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d36n5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hct1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55kv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gvig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxvgl")
}],
"loop": false,
"name": &"Sortie_poteau",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vthu3"]
size = Vector2(2.60503, 0.257794)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g0xpt"]
size = Vector2(3.13497, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ccxle"]
size = Vector2(59.3715, 198.97)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_04e7q"]
size = Vector2(7.66865, 8.41865)

[node name="Poteau" type="StaticBody2D"]
z_index = 1
position = Vector2(502, 384)
script = ExtResource("1_flmbt")

[node name="Hole" type="Sprite2D" parent="."]
position = Vector2(-5, 23)
scale = Vector2(-6.84458, -2.12269)
texture = ExtResource("2_uld2r")
region_enabled = true
region_rect = Rect2(664.133, 238.839, 13.6598, 13.9367)

[node name="PoteauAnim" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(-5, 1)
scale = Vector2(-9.48555, 6.41359)
sprite_frames = SubResource("SpriteFrames_ogko2")
animation = &"Sortie_poteau"

[node name="BarreVerticalDown" type="ColorRect" parent="."]
visible = false
z_index = 1
offset_left = 1.0
offset_top = -51.0
offset_right = 20.67
offset_bottom = -48.0
scale = Vector2(-1.083, 11.458)
color = Color(1, 0, 0.00392157, 1)

[node name="Area2D" type="Area2D" parent="BarreVerticalDown" groups=["Poteau"]]
scale = Vector2(7.51322, -13.4655)
script = ExtResource("4_ik1g8")

[node name="CollisionBarreVerticalDown" type="CollisionShape2D" parent="BarreVerticalDown/Area2D"]
position = Vector2(1.29789, -0.104861)
scale = Vector2(0.985, 0.99)
shape = SubResource("RectangleShape2D_vthu3")

[node name="BarreHorizontalleft" type="ColorRect" parent="."]
visible = false
z_index = 1
offset_left = 4.0
offset_top = -32.0
offset_right = 7.0
offset_bottom = -12.0
rotation = 3.14159
scale = Vector2(17.544, 1)
color = Color(1, 0, 0, 1)

[node name="Area2D" type="Area2D" parent="BarreHorizontalleft" groups=["Poteau", "poteau"]]
script = ExtResource("4_ik1g8")

[node name="CollisionBarreHorizontalLeft" type="CollisionShape2D" parent="BarreHorizontalleft/Area2D"]
position = Vector2(1.45349, 10.0001)
shape = SubResource("RectangleShape2D_g0xpt")

[node name="BarreHorizontalRight" type="ColorRect" parent="."]
visible = false
z_index = 1
offset_left = -14.0
offset_top = -51.0
offset_right = 26.0
offset_bottom = -31.0
color = Color(1, 0, 0, 1)

[node name="Area2D" type="Area2D" parent="BarreHorizontalRight" groups=["Poteau", "poteau"]]
script = ExtResource("4_ik1g8")

[node name="CollisionBarreHorizontalRight$" type="CollisionShape2D" parent="BarreHorizontalRight/Area2D"]
position = Vector2(20, 9.51419)
scale = Vector2(0.673724, 0.105686)
shape = SubResource("RectangleShape2D_ccxle")

[node name="BarreVerticalUp" type="ColorRect" parent="."]
visible = false
z_index = 1
offset_left = 3.0
offset_top = -33.0
offset_right = 23.0
offset_bottom = 7.0
rotation = -3.14159
color = Color(1, 0, 0, 1)

[node name="Area2D" type="Area2D" parent="BarreVerticalUp" groups=["Poteau", "poteau"]]
script = ExtResource("4_ik1g8")

[node name="CollisionBarreVerticalUp" type="CollisionShape2D" parent="BarreVerticalUp/Area2D"]
position = Vector2(10, 21.5)
rotation = -3.14159
scale = Vector2(2.60802, -5.10771)
shape = SubResource("RectangleShape2D_04e7q")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_sithh")
volume_db = 4.643

[connection signal="area_entered" from="BarreVerticalDown/Area2D" to="BarreVerticalDown/Area2D" method="_on_area_entered"]
[connection signal="area_entered" from="BarreHorizontalleft/Area2D" to="BarreHorizontalleft/Area2D" method="_on_area_entered"]
[connection signal="area_entered" from="BarreHorizontalRight/Area2D" to="BarreHorizontalRight/Area2D" method="_on_area_entered"]
[connection signal="area_entered" from="BarreVerticalUp/Area2D" to="BarreVerticalUp/Area2D" method="_on_area_entered"]
